[1.0.19] - Добавление подхвата команд - Добавление альясов - Добавление пермишена - Добавление авторства

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,12 @@ name: DraimMarriage
 version: '${version}'
 main: ru.draimdev.draimmarriage.DraimMarriage
 api-version: 1.18
+author: DraimGooSe
+commands:
+  draimmarriage:
+    description: Main Command.
+    aliases: [dm, marry, dmarry]
+
+permissions:
+  draimmarriage.reload:
+    description: Права на команду /dm reload
