[1.0.25] - Добавление подхвата ECO

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ version: '${version}'
 main: ru.draimdev.draimmarriage.DraimMarriage
 api-version: 1.18
 author: DraimGooSe
+depend:
+  - eco
 commands:
   draimmarriage:
     description: Main Command.
