--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+        maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT'
+    compileOnly 'com.willfp:eco:6.24.1'
 }
 
 def targetJavaVersion = 17
