--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,16 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
-        maven { url 'https://jitpack.io' }
+    maven {
+        name = 'placehodlerapi'
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+    }
 
 }
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.18.1-R0.1-SNAPSHOT'
+    compileOnly 'me.clip:placeholderapi:2.11.1'
 }
 
 def targetJavaVersion = 17
